# golang-101

./: Cargo.toml  main.go
java-to-go-projects/: README.md
java-to-go-projects/01-hello-world/: HelloWorldApplication.java  main.go
java-to-go-projects/01-hello-world/go/: go.mod
java-to-go-projects/02-calculator/: CalculatorController.java  main.go
java-to-go-projects/02-calculator/go/: go.mod
java-to-go-projects/02-calculator/rust/: Cargo.toml
java-to-go-projects/03-todo-list/: TodoController.java
java-to-go-projects/03-todo-list/go/: go.mod  todo.go
java-to-go-projects/03-todo-list/rust/: Cargo.toml
java-to-go-projects/03-todo-list/rust/src/: main.rs
java-to-go-projects/04-log-parser/: LogParser.java
java-to-go-projects/04-log-parser/go/: go.mod  main.go
java-to-go-projects/04-log-parser/rust/: Cargo.toml
java-to-go-projects/05-port-scanner/: Main.java  ScanResult.java  Scanner.java  main.go
java-to-go-projects/05-port-scanner/go/: go.mod  main.go
java-to-go-projects/05-port-scanner/rust/: Cargo.toml
java-to-go-projects/06-json-config-merger/: Loader.java  Main.java  Merger.java
java-to-go-projects/06-json-config-merger/go/: go.mod  main.go
java-to-go-projects/06-json-config-merger/rust/: Cargo.toml
java-to-go-projects/07-concurrent-downloader/: DownloadResult.java  Fetcher.java  Main.java  Pool.java  Progress.java  main.go
java-to-go-projects/07-concurrent-downloader/go/: go.mod
java-to-go-projects/08-cli-task-runner/: Executor.java  Main.java  Parser.java  Task.java
java-to-go-projects/09-markdown-to-html/: Lexer.java  Main.java  Renderer.java  Token.java
java-to-go-projects/10-tcp-chat-server/: ClientHandler.java  Main.java  Message.java  Room.java  Server.java  main.go
java-to-go-projects/11-worker-pool/: Job.java  Main.java  Pool.java  Worker.java
java-to-go-projects/11-worker-pool/go/: go.mod  (+1 more)
java-to-go-projects/12-rate-limiter/: Handler.java  Main.java  Middleware.java  SlidingWindow.java  TokenBucket.java
java-to-go-projects/13-event-emitter/: Emitter.java  Listener.java  Main.java
java-to-go-projects/14-http-proxy/: Config.java  Logger.java  Main.java  Proxy.java  Rewriter.java  main.go
java-to-go-projects/15-csv-to-json/: CsvReader.java  JsonWriter.java  Main.java  TypeDetector.java
java-to-go-projects/16-cron-parser/: Main.java  NextTime.java  Parser.java  Schedule.java  main.go
java-to-go-projects/17-kv-store/: Command.java  Main.java  Persistence.java  Server.java  Store.java  main.go
java-to-go-projects/18-pipeline/: Channel.java  Main.java  Pipeline.java  Stages.java  main.go
java-to-go-projects/19-graceful-server/: Handler.java  LoggerMiddleware.java  Main.java  Server.java  ShutdownHandler.java
java-to-go-projects/20-load-balancer/: Balancer.java  Config.java  Forwarder.java  HealthChecker.java  Main.java  Strategy.java
java-to-go-projects/20-load-balancer/rust/: Cargo.toml
java-to-go-projects/20-load-balancer/rust/src/: balancer.rs  config.rs  forwarder.rs  health.rs  main.rs  strategy.rs
java-to-go-projects/21-kafka-producer-consumer/: main.go
java-to-go-projects/21-kafka-producer-consumer/rust/: Cargo.toml
java-to-go-projects/21-kafka-producer-consumer/rust/src/: consumer.rs  main.rs  producer.rs
java-to-go-projects/22-avro-serde/: main.go
java-to-go-projects/23-rocksdb-engine/: main.go
java-to-go-projects/24-arrow-analytics/: main.go
java-to-go-projects/25-datafusion-queries/: main.go
java-to-go-projects/26-io-uring-fileserver/: main.go
java-to-go-projects/27-cpu-pinning-bench/: main.go
java-to-go-projects/28-lz4-arrow-compress/: main.go
java-to-go-projects/29-direct-io-writer/: main.go
java-to-go-projects/30-glommio-service/: main.go
(+134 files in other folders)
